Conclusion was added.

--- a/3semester/4contest/Fourier_transform.ipynb
+++ b/3semester/4contest/Fourier_transform.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,8 @@
     "    \n",
     "    polynomial1 = FFT(polynomial[0::2])\n",
     "    polynomial2 = FFT(polynomial[1::2])\n",
+    "    \n",
+    "    # print(polynomial1, polynomial2)\n",
     "    \n",
     "    ang = 2 * pi / size\n",
     "    w = complex(1, 0)\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -184,6 +186,13 @@
     "AnalyseFFT(lambda x: sin(x), 3, \"sin x\")\n",
     "AnalyseFFT(lambda x: sin(x**2), 4, \"sin x^2\")\n",
     "AnalyseFFT(lambda x: sin(x) / (x + 1e-9), 5, \"(sin x) / x\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Вывод:** на тригонометрические функции почти не оказывает влияние убирание коэффициентов, а вот в остальных случаях убирание даже одного последнего коэффициента сильно искажает функцию."
    ]
   },
   {
